Cannot scroll up to previous date in Calendar's Week/Month View
As shown here: https://imgur.com/4QhBHR5 - notice the scrollbar goes up, just that the view is locked to the current month. Scrolling down works. On every failed scroll, this error is shown in the terminal: (evolution:18950): GLib-CRITICAL **: 12:02:13.743: g_date_add_days: assertion 'ndays <= G_MAXUINT32 - d->julian_days' failed
. The same happens for the Week View.
Workaround: Scrolling in the tiny calendar in the lower left corner works, and unlocks the scrolling up to the month/week selected in that tiny calendar.
This is a bug in Evolution 3.28.5 - 3.30.1, GLib 2.58.0 (packaged in Arch).
Edited by Milan Crha