I#135 - Cannot scroll up to previous date in Calendar's Week/Month View

Closes https://gitlab.gnome.org/GNOME/evolution/issues/135